# StickyNote-Plus-Plus

./: .gitignore  CMakeLists.txt  readme.md
Gui/: ActionCommand.cpp  ActionCommand.h  ColorWidget.cpp  ColorWidget.h  CompatibilityTool.cpp  CompatibilityTool.h  DiversityContent.cpp  DiversityContent.h  Form - untitled  HistoryWidget.cpp  HistoryWidget.h  NoteTextEdit.cpp  NoteTextEdit.h  ProcessCommunication.h  Setting.cpp  Setting.h  SettingUI.cpp  StickyNote.cpp  StickyNote.h  StickyNoteContentChangeEvent.h  StickyNoteFactory.h  StickyNoteItem.cpp  StickyNoteItem.h  StickyNoteItemContent.cpp  StickyNoteItemContent.h  StickyNoteMagnetic.cpp  StickyNoteMagnetic.h  StickyNotePool.cpp  StickyNotePool.h  StickyNoteText.cpp  StickyNoteToDoList.cpp  SystemTrayIcon.cpp  ToDoListContent.cpp  ToDoListContent.h  ToDoListItem.cpp  ToDoListItem.h  ToDoListItem.ui  UpdateUI.h  main.cpp  mainWindow.ui  (+2 more)
Gui/translate/: StickyNoteGui.ts
OriginUI/: DelayDialog.cpp  DelayDialog.ui  DrawerWidgetReverse.h  EditLable.h  InputLineEdit.cpp  InputLineEdit.h  KeyboardLineEdit.cpp  KeyboardToString.hpp  NativeWindowTemplate.hpp  NavigationBar.h  SimpleRichTextEdit.cpp  SimpleRichTextEdit.h  TempTextEdit.cpp  TempTextEdit.h  ToolBar.cpp  ToolBar.h  ToolButtonColor.cpp  ToolButtonColor.h  WidgetNoBoder.cpp  WindowNoBoder.cpp  circleSwitch.cpp  drawerWidget.cpp  drawerWidget.h  main.cpp
StickyNoteFile/: ImageSave.cpp  ImageSave.h  NoteFile.cpp  NoteFile.h  Property.cpp  Property.h  Setting.cpp
WinApiPackage/: FindWindow.c  FindWindow.h  PCStartRun.c  SetWindowState.c  SetWindowState.h
(+5 files in other folders)
